# fontview

./: Cargo.toml  README.md
assets/: freemono.bmfa
shaders/: fontview.frag.glsl  fontview.vert.glsl
shaders/330/: fontview.frag.glsl  fontview.vert.glsl
shaders/420/: fontview.frag.glsl
src/: font_atlas.rs  gl_help.rs  main.rs
