[package]
name = "fontview"
version = "0.2.6"
authors = ["Stallmanifold <stallmanifold@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "A shell utility for prototyping bitmapped fonts in computer graphics applications."
keywords = ["games", "game development", "fonts", "graphics"]

[dependencies]
glfw = "0.28.0"
log = "0.4.6"
stb_image = "0.2.2"
structopt = "0.2.15"
bmfa = { git = "https://github.com/stallmanifold/bmfa" }

[build-dependencies]
gl_generator = "0.11.0"
