[package]
name = "fontview"
version = "0.5.5"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "A shell utility for prototyping bitmapped fonts in computer graphics applications."
keywords = ["games", "game development", "fonts", "text", "graphics"]


[dependencies]
glfw = "0.29.0"
log = "0.4.6"
stb_image = "0.2.2"
structopt = "0.2.18"
bmfa = { git = "https://github.com/lambdaxymox/bmfa" }
serde = "1.0.99"


[build-dependencies]
gl_generator = "0.11.0"
